# bnc-lookup

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
bnc_lookup/: __init__.py  cli.py  find_bnc.py  find_freq.py  find_rf.py  find_words.py  normalize.py
bnc_lookup/bw/: __init__.py  bw_01.py  bw_02.py  bw_03.py  bw_04.py  bw_05.py  bw_06.py  bw_07.py  bw_08.py  bw_09.py  bw_10.py  bw_100.py  bw_11.py  bw_12.py  bw_13.py  bw_14.py  bw_15.py  bw_16.py  bw_17.py  bw_18.py  bw_19.py  bw_20.py  bw_21.py  bw_22.py  bw_23.py  bw_24.py  bw_25.py  bw_26.py  bw_27.py  bw_28.py  bw_29.py  bw_30.py  bw_31.py  bw_32.py  bw_33.py  bw_34.py  bw_35.py  bw_36.py  bw_37.py  bw_38.py  (+61 more)
bnc_lookup/freq/: __init__.py  f_00.py  f_01.py  f_02.py  f_03.py  f_04.py  f_05.py  f_06.py  f_07.py  f_08.py  f_09.py  f_0a.py  f_0b.py  f_0c.py  f_0d.py  f_0e.py  f_0f.py  f_10.py  f_11.py  f_12.py  f_13.py  f_14.py  f_15.py  f_16.py  f_17.py  f_18.py  f_19.py  f_1a.py  f_1b.py  f_1c.py  f_1d.py  f_1e.py  f_1f.py  f_20.py  f_21.py  f_22.py  f_23.py  f_24.py  f_25.py  f_26.py  (+217 more)
bnc_lookup/hs/: __init__.py  h_00.py  (+255 more)
docs/: API.md  FREQUENCY_EXAMPLES.md  IMPLEMENTATION.md  WORDNET_COVERAGE.md
tests/: bnc_lookup_test.py  contractions_test.py  edge_cases_test.py  exists_unchanged_test.py  non_contraction_unaffected_test.py  normalization_test.py  nt_contraction_buckets_test.py  nt_contraction_expected_count_test.py  nt_contraction_rf_test.py  other_contraction_buckets_test.py  other_contraction_rf_test.py  s_contraction_buckets_test.py  s_contraction_no_split_possessives_test.py  s_contraction_rf_test.py  s_contraction_split_test.py  smart_quote_contractions_test.py  unicode_accent_test.py
(+257 files in other folders)
