[tool.poetry]

authors = [
  "Craig Trim <craigtrim@gmail.com>",
]

maintainers = [
  "Craig Trim <craigtrim@gmail.com>",
]

description = "Static Hash-Based Lookup for BNC Terms"
name = "bnc-lookup"
readme = "README.md"
version = "1.4.3"
license = "MIT"

keywords = [
  "bnc",
  "lexicon",
  "nlp",
  "natural-language-processing",
  "dictionary",
  "vocabulary",
  "validation",
  "linguistics",
]

repository = "https://github.com/craigtrim/bnc-lookup"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Natural Language :: English",
  "Operating System :: OS Independent",
]

[tool.poetry.scripts]
bnc-exists = "bnc_lookup.cli:exists"
bnc-bucket = "bnc_lookup.cli:bucket"
bnc-freq = "bnc_lookup.cli:freq"
bnc-expected = "bnc_lookup.cli:expected"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "*"
ruff = "*"
plac = "*"
pre-commit = "^2.20.0"
pytest = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]

explicit_package_bases = true
files = "src"
mypy_path = "src"
namespace_packages = true
show_error_codes = true
strict = false
